--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sort-by": "^1.2.0",
     "swiper": "^9.0.1",
     "web-vitals": "^2.1.4"
