fix: env configuration

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_HOST=http://localhost:5500
+REACT_APP_HOST=https://hireapp-array.cyclic.app
+REACT_APP_IMG=https://res.cloudinary.com/deagxiwjt
